--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -139,6 +139,12 @@
 	Experience with: & configuration files, package managers, compilation, makefiles. \\
 \etab
 
+{\bf Languages}
+
+\btab{1.1}{ l l }
+	English: Native Speaker
+\etab
+
 \end{rSection}
 
 \end{document}
