--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -62,7 +62,7 @@
 \begin{rSubsection}{Arkansas School for Mathematics, Sciences, and the Arts}{August 2012 - May 2014}{High School Graduation}
 
 	\item Third place Intel International Science and Engineering Fair project in Materials Engineering at the local level for my research on the optimization of aluminum can camping stoves.
-	\item Courses: AP Calculus AB, Calculus 2, Calculus 3 (Vector Calculus) Advanced placement Physics C Mechanics, Advanced Placement Physics C Electricity and Magnetism, Computer Programming 1, Computer Programming 2, Data Structures and Algorithms, Introduction to Web Application Development, Graphics Programming, Discrete Mathematics.
+	\item Courses: AP Calculus AB, Calculus 2, Calculus 3 (Vector Calculus), Advanced placement Physics C Mechanics, Advanced Placement Physics C Electricity and Magnetism, Computer Programming 1, Computer Programming 2, Data Structures and Algorithms, Introduction to Web Application Development, Graphics Programming, Discrete Mathematics.
 \end{rSubsection}
 
 \end{rSection}
@@ -92,7 +92,7 @@
 	\item An online Python development environment.
 	\item The backend was build using Python 3.4 and Django 1.7.
 	\item The frontend uses Ace for the code editor and Skulpt for the Python interpreter.
-	\item Currently the user can create new projects and access them with permalinks, fork projects, browse projects, and make projects public or private.
+	\item Currently the user can create new projects and access them with permalinks, fork projects, browse projects, edit and save projects, and make projects public or private.
 \end{rSubsection}
 
 \begin{rSubsection}{Rust}{November 2014 - Present}{}{}
