--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -113,6 +113,7 @@
 \btab{1.1}{ l l }
 	Languages: & C, Java, Python, C\#, Rust, JavaScript. \\
 	Version Control Systems: & git, Team Foundation Server. \\
+	Debuggers: & gdb, Visual Studio 2012 Debugging Software. \\
 	Package Managers: & Cargo(Rust), PIP(Python). \\
 \etab
 
