--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -1,6 +1,4 @@
 
-% Imports and shit
-
 \documentclass{resume} % Use the custom resume.cls style
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
@@ -37,7 +35,7 @@
 
 	\item Worked under Dr. Carolina Cruz-Neira, the inventor of the CAVE system.
 	\item Developed Data Visualization solutions for Oculus Rift and CAVE system.
-	\item Used Unity 3D (scripting with C\#) for 3D programming and model manipulation.
+	\item Used Unity 3D C\# for 3D programming and model manipulation.
 	\item Used OpenCV (used OpenCvSharp to integrate with C\#) for computer vision applications.
 \end{rSubsection}
 
@@ -47,6 +45,16 @@
     \item Used C\#, ASP.NET MVC3, Microsoft SQL Server, Visual Studio 2012, Team Foundatin Server, Windows 7 to develop software.
 	\item Used the SCRUM agile software development framework.
 \end{rSubsection}
+
+\end{rSection}
+
+\begin{rSection}{Volunteer}
+
+	\begin{rSubsection}{Student Volunteer, IEEE Virtual Reality Conference}{March 23, 2015 - March 27, 2015}{Arles, France}
+
+		\item Was accepted as a student volunteer for the 2015 IEEE Virtual Reality conference.
+		\item I will give 20 hours of volunteer work and recieve conference registration and proceedings.
+	\end{rSubsection}
 
 \end{rSection}
 
