Corrected the format for the studnet volunteer.

--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -50,7 +50,7 @@
 
 \begin{rSection}{Volunteer}
 
-	\begin{rSubsection}{Student Volunteer, IEEE Virtual Reality Conference}{March 23, 2015 - March 27, 2015}{Arles, France}
+	\begin{rSubsection}{IEEE Virtual Reality Conference}{March 23, 2015 - March 27, 2015}{Student Volunteer}{Arles, France}
 
 		\item Was accepted as a student volunteer for the 2015 IEEE Virtual Reality conference.
 		\item I will give 20 hours of volunteer work and recieve conference registration and proceedings.
