changed github account name.

--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -77,7 +77,7 @@
 
 \begin{rSection}{Online}
 
-	\item {\href{https://github.com/DylanTheVillain}{https://github.com/DylanTheVillain}}
+	\item {\href{https://github.com/dcjohnson}{https://github.com/dcjohnson}}
 	\item {\href{https://www.linkedin.com/in/DylanJohnson1}{https://www.linkedin.com/in/DylanJohnson1}}
 \end{rSection}
 
@@ -87,7 +87,7 @@
 \begin{rSection}{Personal Projects}
 
 % CodeBin
-\begin{rSubsection}{\href{https://github.com/DylanTheVillain/CodeBin}{CodeBin}}{December 2014 - Present}{}{}
+\begin{rSubsection}{\href{https://github.com/dcjohnson/CodeBin}{CodeBin}}{December 2014 - Present}{}{}
 
 	\item An online Python development environment.
 	\item The backend was build using Python 3.4 and Django 1.7.
@@ -97,8 +97,8 @@
 
 \begin{rSubsection}{Rust}{November 2014 - Present}{}{}
 	\item My current projects through which I am learning the Rust Programming Language that is being developed by Mozilla.
-	\item {\href{https://github.com/DylanTheVillain/Rust-Game}{Rust-Game}} My current attempt to build a small multiplayer game in Rust.
-	\item {\href{https://github.com/DylanTheVillain/Little-Rust-Tcp}{Little-Rust-Tcp}} The small TCP Socket library that I am writing for the game.
+	\item {\href{https://github.com/dcjohnson/Rust-Game}{Rust-Game}} My current attempt to build a small multiplayer game in Rust.
+	\item {\href{https://github.com/dcjohnson/Little-Rust-Tcp}{Little-Rust-Tcp}} The small TCP Socket library that I am writing for the game.
 	\item Both of the mentioned projects are being managed using Cargo.
 \end{rSubsection}
 
