--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -53,7 +53,8 @@
 	\begin{rSubsection}{IEEE Virtual Reality Conference}{March 23, 2015 - March 27, 2015}{Student Volunteer}{Arles, France}
 
 		\item Was accepted as a student volunteer for the 2015 IEEE Virtual Reality conference.
-		\item I will give 20 hours of volunteer work and recieve conference registration and proceedings.
+		\item I gave 15 hours of volunteer work and recieved conference registration and proceedings.
+		\item While at the conference, I sat in on several paper presentations as well as the keynote speeches by Mark Billinghurst and Mel Slater.
 	\end{rSubsection}
 
 \end{rSection}
