--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -55,6 +55,7 @@
 		\item Was accepted as a student volunteer for the 2015 IEEE Virtual Reality conference.
 		\item I gave 15 hours of volunteer work and recieved conference registration and proceedings.
 		\item While at the conference, I sat in on several paper presentations as well as the keynote speeches by Mark Billinghurst and Mel Slater.
+		\item I also gave a presentation on how to use OpenCV with Unity and Vuforia.
 	\end{rSubsection}
 
 \end{rSection}
