--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -89,7 +89,7 @@
 \begin{rSection}{Personal Projects}
 
 % CodeBin
-\begin{rSubsection}{\href{https://github.com/dcjohnson/CodeBin}{CodeBin}}{December 2014 - Present}{}{}
+\begin{rSubsection}{\href{https://github.com/dcjohnson/CodeBin}{CodeBin}}{December 2014 - February 2015}{}{}
 
 	\item An online Python development environment.
 	\item The backend was build using Python 3.4 and Django 1.7.
@@ -102,6 +102,12 @@
 	\item {\href{https://github.com/dcjohnson/Rust-Game}{Rust-Game}} My current attempt to build a small multiplayer game in Rust.
 	\item {\href{https://github.com/dcjohnson/Little-Rust-Tcp}{Little-Rust-Tcp}} The small TCP Socket library that I am writing for the game.
 	\item Both of the mentioned projects are being managed using Cargo.
+\end{rSubsection}
+
+\begin{rSubsection}{Lisp Interpreters}{February 2015 - Present}{}{}
+	\item I am currently trying to write a Lisp interpreter.
+	\item My first attempt was somewhat successful.  It has a working lexer\"parser and it can evaluate valid Lisps that use builtin functions.
+	\item I am currently rewriting this project in the Rust language.  This version will be much more feature complete.
 \end{rSubsection}
 
 \end{rSection}
