--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -106,7 +106,7 @@
 
 \begin{rSubsection}{Lisp Interpreters}{February 2015 - Present}{}{}
 	\item I am currently trying to write a Lisp interpreter.
-	\item My first attempt was somewhat successful.  It has a working lexer\"parser and it can evaluate valid Lisps that use builtin functions.
+	\item My first attempt was somewhat successful.  It has a working lexer\textbackslash parser and it can evaluate valid Lisps that use builtin functions.
 	\item I am currently rewriting this project in the Rust language.  This version will be much more feature complete.
 \end{rSubsection}
 
