--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -86,11 +86,10 @@
 \end{rSection}
 
 % Personal Projects
-\begin{rSection}{Personal Projects}
+\begin{rSection}{Personal Projects (All hosted on github)}
 
 % CodeBin
 \begin{rSubsection}{\href{https://github.com/dcjohnson/CodeBin}{CodeBin}}{December 2014 - February 2015}{}{}
-
 	\item An online Python development environment.
 	\item The backend was build using Python 3.4 and Django 1.7.
 	\item The frontend uses Ace for the code editor and Skulpt for the Python interpreter.
@@ -108,6 +107,8 @@
 	\item I am currently trying to write a Lisp interpreter.
 	\item My first attempt was somewhat successful.  It has a working lexer\textbackslash parser and it can evaluate valid Lisps that use builtin functions.
 	\item I am currently rewriting this project in the Rust language.  This version will be much more feature complete.
+	\item {\href{https://github.com/dcjohnson/hackit}{First attempt}}
+	\item {\href{https://github.com/dcjohnson/Hackit-v2}{Current attempt}}
 \end{rSubsection}
 
 \end{rSection}
@@ -119,7 +120,7 @@
 {\bf General Programming}
 
 \btab{1.1}{ l l }
-	Languages: & C, Java, Python, C\#, Rust, JavaScript. \\
+	Languages: & C, Java, Python, C\#, (Learning) Rust, JavaScript. \\
 	Version Control Systems: & git, Team Foundation Server. \\
 	Debuggers: & gdb, Visual Studio 2012 Debugging Software. \\
 	Package Managers: & Cargo(Rust), PIP(Python). \\
