--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -22,7 +22,7 @@
 }
 
 \name{Dylan Johnson} % Your name
-\address{3101 S. Taylor St. Apt 745 \\ Little Rock, Arkansas 72204} % Your address
+\address{44 Shoshoni Dr \\ Sherwood, Arkansas 72120} % Your address
 \address{(501)~$\cdot$~547~$\cdot$~1621 \\ dylanatasmsa@gmail.com} % Your phone number and email
 
 \begin{document}
@@ -30,8 +30,14 @@
 % Work Experience
 \begin{rSection}{Experience}
 
-% Emerging Analytics Center
-\begin{rSubsection}{Emerging Analytics Center, UALR}{October 2014 - Present}{Software Engineering Intern}{Little Rock, AR}
+\begin{rSubsection}{Search User Interface Team, Ancestry.com}{May 2015 - Present}{Software Engineering Intern}{Provo, UT}
+
+	\item Worked with the SearchUI team of Ancestry.com.
+	\item Assisted with the development of new production level code, improved site performance, and fixed bugs.
+	\item Development in JavaScript, C\#, SQL, Visual Studio 2013, Windows 7.
+\end{rSubsection}
+
+\begin{rSubsection}{Emerging Analytics Center, UALR}{October 2014 - May 2015}{Software Engineering Intern}{Little Rock, AR}
 
 	\item Worked under Dr. Carolina Cruz-Neira, the inventor of the CAVE system.
 	\item Developed Data Visualization solutions for Oculus Rift and CAVE system.
