--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -22,7 +22,7 @@
 }
 
 \name{Dylan Johnson} % Your name
-\address{44 Shoshoni Dr \\ Sherwood, Arkansas 72120} % Your address
+\address{172 N 920 W \\ Orem, Utah 84057} % Your address
 \address{(501)~$\cdot$~547~$\cdot$~1621 \\ dylanatasmsa@gmail.com} % Your phone number and email
 
 \begin{document}
@@ -33,6 +33,7 @@
 \begin{rSubsection}{Search User Interface Team, Ancestry.com}{May 2015 - Present}{Software Engineering Intern}{Provo, UT}
 	\item Worked with the SearchUI team of Ancestry.com.
 	\item Assisted with the development of new production level code, improved site performance, and fixed bugs.
+	\item Contributed to the development of new services and features. Such as the pagination widget.
 	\item Development in JavaScript, C\#, SQL, Visual Studio 2013, Windows 7.
 \end{rSubsection}
 
@@ -66,7 +67,11 @@
 
 \begin{rSection}{Education}
 
-\begin{rSubsection}{University of Arkansas, Little Rock}{August 2014 - Expected Graduation Year: 2017}{B.S. in Computer Science}
+\begin{rSubsection}{Utah Valley University}{August 2015 - Expected graudation date: December 2017}{B.S. in Computer Science: Computer Science emaphasis}
+	\item Courses: Computer Networks 1, Statistics and Probability for engineers.
+\end{rSubsection}
+
+\begin{rSubsection}{University of Arkansas, Little Rock}{August 2014 - May 2015}{B.S. in Computer Science}
 	\item Courses: Language Structure, Computer Systems and Assembly Language, Linear Algebra, Operating Systems, Databases, Theory of Computation.
 \end{rSubsection}
 
@@ -93,19 +98,18 @@
 	\item Currently the user can create new projects and access them with permalinks, fork projects, browse projects, edit and save projects, and make projects public or private.
 \end{rSubsection}
 
-\begin{rSubsection}{Rust}{November 2014 - Present}{}{}
+\begin{rSubsection}{Rust}{November 2014 - Hiateus}{}{}
 	\item My current projects through which I am learning the Rust Programming Language that is being developed by Mozilla.
 	\item {\href{https://github.com/dcjohnson/Rust-Game}{Rust-Game}} My current attempt to build a small multiplayer game in Rust.
 	\item {\href{https://github.com/dcjohnson/Little-Rust-Tcp}{Little-Rust-Tcp}} The small TCP Socket library that I am writing for the game.
 	\item Both of the mentioned projects are being managed using Cargo.
 \end{rSubsection}
 
-\begin{rSubsection}{Lisp Interpreters}{February 2015 - Present}{}{}
-	\item I am currently trying to write a Lisp interpreter.
-	\item My first attempt was somewhat successful.  It has a working lexer\textbackslash parser and it can evaluate valid Lisps that use builtin functions.
-	\item I am currently rewriting this project in the Rust language.  This version will be much more feature complete.
+\begin{rSubsection}{Lisp Interpreters}{February 2015 - September 2015}{}{}
+	\item I attempted to write a basic Lisp interpreter with no formal background in compilers. The result is quite buggy but I did learn a lot. If I have time I try to give myself a more formal introduction to compilers. I will also have to write a compiler as part of my degree.
 	\item {\href{https://github.com/dcjohnson/hackit}{First attempt}}
-	\item {\href{https://github.com/dcjohnson/Hackit-v2}{Current attempt}}
+	\item {\href{https://github.com/dcjohnson/hackit-v2}{Recent attempt}}
+	\item {\href{https://github.com/dcjohnson/libhackit-v2}{Recent attempt}}
 \end{rSubsection}
 
 \end{rSection}
@@ -117,19 +121,19 @@
 {\bf General Programming}
 
 \btab{1.1}{ l l }
-	Languages: & C, Java, Python, C\#, (Learning) Rust, JavaScript. \\
+	Languages: & C, Java, Python, C\#, Rust, JavaScript. \\
 	Version Control Systems: & git, Team Foundation Server. \\
 	Debuggers: & gdb, Visual Studio 2012 Debugging Software. \\
-	Package Managers: & Cargo(Rust), PIP(Python). \\
+	Package Managers: & Cargo(Rust), PIP(Python), NuGet, NPM. \\
 \etab
 
 {\bf Web Programming}
 
 \btab{1.1}{ l l }
-	Server side: & Python, C\#, PHP, and SQL (MySQL, Microsoft SQL Server). \\
+	Server side: & Python, C\#, PHP, and SQL (MySQL, Microsoft SQL Server), Node.js. \\
 	Client side: & JavaScript, CSS, (X)HTML. \\
-	Servers: & Apache, Internet Information Services. \\
-	Web Frameworks: & Django, ASP.NET MVC3 C\#. \\
+	Servers: & Apache, Internet Information Services, Node.js. \\
+	Web Frameworks: & Django, ASP.NET MVC3 C\#, Express.js. \\
 	Common Gateway Interface: & Python. \\
 \etab
 
@@ -137,7 +141,7 @@
 
 \btab{1.1}{ l l }
     IDEs: & Visual Studio 2012, Visual Studio 2013, Monodevelop, Xamarin. \\
-	Text Editors: & Vim, Sublime Text, Atom. \\
+	Text Editors: & Emacs, Sublime Text, Atom. \\
 \etab
 
 {\bf Operating Systems}
@@ -150,7 +154,7 @@
 {\bf Unix System Administration}
 
 \btab{1.1}{ l l }
-	Proficient with command line utils: & grep, ssh, vim, nano, tar etc. \\
+	Proficient with command line utils: & grep, ssh, vim, nano, tar etc, really good at Googling this stuff. \\
 	Experience with: & configuration files, package managers, compilation, makefiles. \\
 \etab
 
