--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -83,29 +83,36 @@
 \end{rSection}
 
 \begin{rSection}{Online}
+
+\begin{rSubsection}{Github}{}{}{}
 	\item {\href{https://github.com/dcjohnson}{https://github.com/dcjohnson}}
+\end{rSubsection}
+
+\begin{rSubsection}{Linkedin}{}{}{}
 	\item {\href{https://www.linkedin.com/in/DylanJohnson1}{https://www.linkedin.com/in/DylanJohnson1}}
+\end{rSubsection}
+
 \end{rSection}
 
 % Personal Projects
 \begin{rSection}{Personal Projects (All hosted on github)}
 
 % CodeBin
-\begin{rSubsection}{\href{https://github.com/dcjohnson/CodeBin}{CodeBin}}{December 2014 - February 2015}{}{}
+\begin{rSubsection}{\href{https://github.com/dcjohnson/CodeBin}{CodeBin}}{}{}{}
 	\item An online Python development environment.
 	\item The backend was build using Python 3.4 and Django 1.7.
 	\item The frontend uses Ace for the code editor and Skulpt for the Python interpreter.
 	\item Currently the user can create new projects and access them with permalinks, fork projects, browse projects, edit and save projects, and make projects public or private.
 \end{rSubsection}
 
-\begin{rSubsection}{Rust}{November 2014 - Hiateus}{}{}
+\begin{rSubsection}{Rust}{}{}{}
 	\item My current projects through which I am learning the Rust Programming Language that is being developed by Mozilla.
 	\item {\href{https://github.com/dcjohnson/Rust-Game}{Rust-Game}} My current attempt to build a small multiplayer game in Rust.
 	\item {\href{https://github.com/dcjohnson/Little-Rust-Tcp}{Little-Rust-Tcp}} The small TCP Socket library that I am writing for the game.
 	\item Both of the mentioned projects are being managed using Cargo.
 \end{rSubsection}
 
-\begin{rSubsection}{Lisp Interpreters}{February 2015 - September 2015}{}{}
+\begin{rSubsection}{Lisp Interpreters}{}{}{}
 	\item I attempted to write a basic Lisp interpreter with no formal background in compilers. The result is quite buggy but I did learn a lot. If I have time I try to give myself a more formal introduction to compilers. I will also have to write a compiler as part of my degree.
 	\item {\href{https://github.com/dcjohnson/hackit}{First attempt}}
 	\item {\href{https://github.com/dcjohnson/hackit-v2}{Recent attempt}}
@@ -133,7 +140,7 @@
 	Server side: & Python, C\#, PHP, and SQL (MySQL, Microsoft SQL Server), Node.js. \\
 	Client side: & JavaScript, CSS, (X)HTML. \\
 	Servers: & Apache, Internet Information Services, Node.js. \\
-	Web Frameworks: & Django, ASP.NET MVC3 C\#, Express.js. \\
+	Web Frameworks: & Django, ASP.NET MVC3 C\#, Express.js(learning). \\
 	Common Gateway Interface: & Python. \\
 \etab
 
