--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -31,22 +31,21 @@
 \begin{rSection}{Experience}
 
 \begin{rSubsection}{Search User Interface Team, Ancestry.com}{May 2015 - Present}{Software Engineering Intern}{Provo, UT}
-	\item Worked with the SearchUI team of Ancestry.com.
+	\item Worked under the SearchUI team of Ancestry.com, and other teams when necessary.
 	\item Assisted with the development of new production level code, improved site performance, and fixed bugs.
-	\item Contributed to the development of new services and features. Such as the pagination widget.
+	\item Contributed to the development of new services and features, such as the pagination widget.
 	\item Development in JavaScript, C\#, SQL, Visual Studio 2013, Windows 7.
 \end{rSubsection}
 
 \begin{rSubsection}{Emerging Analytics Center, UALR}{October 2014 - May 2015}{Software Engineering Intern}{Little Rock, AR}
 	\item Worked under Dr. Carolina Cruz-Neira, the inventor of the CAVE system.
-	\item Developed Data Visualization solutions for Oculus Rift and CAVE system.
 	\item Used Unity 3D C\# for 3D programming and model manipulation.
 	\item Used OpenCV (used OpenCvSharp to integrate with C\#) for computer vision applications.
 \end{rSubsection}
 
 \begin{rSubsection}{Search User Interface Team, Ancestry.com}{June 2014 - August 2014}{Software Engineering Intern}{Provo, UT}
-    \item Worked with a team of engineers to remove and update an old and restrictive codebase.
-    \item Used C\#, ASP.NET MVC3, Microsoft SQL Server, Visual Studio 2012, Team Foundatin Server, Windows 7 to develop software.
+	\item Worked with a team of engineers to remove and update an old and restrictive codebase.
+	\item Used C\#, ASP.NET MVC3, Microsoft SQL Server, Visual Studio 2012, Team Foundation Server, Windows 7 to develop software.
 	\item Used the SCRUM agile software development framework.
 \end{rSubsection}
 
@@ -56,7 +55,7 @@
 
 \begin{rSubsection}{IEEE Virtual Reality Conference}{March 23, 2015 - March 27, 2015}{Student Volunteer}{Arles, France}
 	\item Was accepted as a student volunteer for the 2015 IEEE Virtual Reality conference.
-	\item I gave 15 hours of volunteer work and recieved conference registration and proceedings.
+	\item I gave 15 hours of volunteer work and received conference registration and proceedings.
 	\item While at the conference, I sat in on several paper presentations as well as the keynote speeches by Mark Billinghurst and Mel Slater.
 	\item I also gave a presentation on how to use OpenCV with Unity and Vuforia.
 \end{rSubsection}
@@ -67,7 +66,7 @@
 
 \begin{rSection}{Education}
 
-\begin{rSubsection}{Utah Valley University}{August 2015 - Expected graudation date: December 2017}{B.S. in Computer Science: Computer Science emaphasis}
+\begin{rSubsection}{Utah Valley University}{August 2015 - Expected graduation date: December 2017}{B.S. in Computer Science: Computer Science emaphasis}
 	\item Courses: Computer Networks 1, Statistics and Probability for engineers.
 \end{rSubsection}
 
@@ -105,18 +104,15 @@
 	\item Currently the user can create new projects and access them with permalinks, fork projects, browse projects, edit and save projects, and make projects public or private.
 \end{rSubsection}
 
-\begin{rSubsection}{Rust}{}{}{}
-	\item My current projects through which I am learning the Rust Programming Language that is being developed by Mozilla.
-	\item {\href{https://github.com/dcjohnson/Rust-Game}{Rust-Game}} My current attempt to build a small multiplayer game in Rust.
-	\item {\href{https://github.com/dcjohnson/Little-Rust-Tcp}{Little-Rust-Tcp}} The small TCP Socket library that I am writing for the game.
-	\item Both of the mentioned projects are being managed using Cargo.
-\end{rSubsection}
-
 \begin{rSubsection}{Lisp Interpreters}{}{}{}
-	\item I attempted to write a basic Lisp interpreter with no formal background in compilers. The result is quite buggy but I did learn a lot. If I have time I try to give myself a more formal introduction to compilers. I will also have to write a compiler as part of my degree.
+	\item I attempted to write a basic Lisp interpreter with no formal background in compilers. The result is quite buggy but I did learn a lot. If I have time, I try to give myself a more formal introduction to compilers. I will also have to write a compiler as part of my degree.
 	\item {\href{https://github.com/dcjohnson/hackit}{First attempt}}
 	\item {\href{https://github.com/dcjohnson/hackit-v2}{Recent attempt}}
 	\item {\href{https://github.com/dcjohnson/libhackit-v2}{Recent attempt}}
+\end{rSubsection}
+
+\begin{rSubsection}{Books}{}{}{}
+	\item Started reading The Art of Computer Programming by Donald Knuth. It is slow going because it is a very dense book; I also have to check it out from the library.
 \end{rSubsection}
 
 \end{rSection}
@@ -128,40 +124,41 @@
 {\bf General Programming}
 
 \btab{1.1}{ l l }
-	Languages: & C, Java, Python, C\#, Rust, JavaScript. \\
-	Version Control Systems: & git, Team Foundation Server. \\
-	Debuggers: & gdb, Visual Studio 2012 Debugging Software. \\
+	Languages: & C\#, JavaScript \\
+	Proficient Languages: & C, Java, Python, Rust \\
+	Version Control Systems: & Git, Team Foundation Server. \\
+	Debuggers: & GDB, Visual Studio 2013 Debugging Software; learning the Nodejs debugger. \\
 	Package Managers: & Cargo(Rust), PIP(Python), NuGet, NPM. \\
 \etab
 
 {\bf Web Programming}
 
 \btab{1.1}{ l l }
-	Server side: & Python, C\#, PHP, and SQL (MySQL, Microsoft SQL Server), Node.js. \\
+	Server side: & Node.js, C\#, Python, PHP, and SQL (MySQL, Microsoft SQL Server). \\
 	Client side: & JavaScript, CSS, (X)HTML. \\
 	Servers: & Apache, Internet Information Services, Node.js. \\
-	Web Frameworks: & Django, ASP.NET MVC3 C\#, Express.js(learning). \\
+	Web Frameworks: & Django, ASP.NET MVC C\#, Express.js. \\
 	Common Gateway Interface: & Python. \\
 \etab
 
 {\bf Development Enviromnents}
 
 \btab{1.1}{ l l }
-    IDEs: & Visual Studio 2012, Visual Studio 2013, Monodevelop, Xamarin. \\
-	Text Editors: & Emacs, Sublime Text, Atom. \\
+	IDEs: & Visual Studio 2013, MonoDevelop, Intellij(Node.js). \\
+	Text Editors: & Emacs, Atom. \\
 \etab
 
 {\bf Operating Systems}
 
 \btab{1.1}{ l l }
 	Linux: & Debian, Ubuntu, Manjaro, Linux Mint, Slackware. \\
-	Windows: & XP, 7, 8. \\
+	Windows: & 7. \\
 \etab
 
 {\bf Unix System Administration}
 
 \btab{1.1}{ l l }
-	Proficient with command line utils: & grep, ssh, vim, nano, tar etc, really good at Googling this stuff. \\
+	Proficient with command line utils: & grep, ssh, vim, nano, tar etc; really good at Googling this stuff. \\
 	Experience with: & configuration files, package managers, compilation, makefiles. \\
 \etab
 
