--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -1,4 +1,3 @@
-
 \documentclass{resume} % Use the custom resume.cls style
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
@@ -30,7 +29,11 @@
 % Work Experience
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Search User Interface Team, Ancestry.com}{May 2015 - Present}{Software Engineering Intern}{Provo, UT}
+\begin{rSubsection}{Infrastructure as a Service Team, Ancestry.com}{February 2016 - Present}{Software Engineering Intern}{Provo, UT}
+  \item Working with Docker, Kubernetes, and Go to write infrastructural software for Ancestry.com
+\end{rSubsection}
+
+\begin{rSubsection}{Search User Interface Team, Ancestry.com}{May 2015 - February 2016}{Software Engineering Intern}{Provo, UT}
 	\item Worked under the SearchUI team of Ancestry.com, and other teams when necessary.
 	\item Assisted with the development of new production level code, improved site performance, and fixed bugs.
 	\item Contributed to the development of new services and features, such as the pagination widget.
@@ -67,7 +70,8 @@
 \begin{rSection}{Education}
 
 \begin{rSubsection}{Utah Valley University}{August 2015 - Expected graduation date: December 2017}{B.S. in Computer Science: Computer Science emaphasis}
-	\item Courses: Computer Networks 1, Statistics and Probability for engineers.
+\item Courses: Computer Networks 1, Computer Networks 2, Advanced C++, Intro to Numerical Programming, Python, Statistics and Probability for engineers.
+\item Currently Enrolled: Analysis of Programming Languages, Advanced/High Performance Architecture, Object Oriented Design Patterns, Ordinary Differential Equations.
 \end{rSubsection}
 
 \begin{rSubsection}{University of Arkansas, Little Rock}{August 2014 - May 2015}{B.S. in Computer Science}
@@ -96,14 +100,6 @@
 % Personal Projects
 \begin{rSection}{Personal Projects (All hosted on github)}
 
-% CodeBin
-\begin{rSubsection}{\href{https://github.com/dcjohnson/CodeBin}{CodeBin}}{}{}{}
-	\item An online Python development environment.
-	\item The backend was build using Python 3.4 and Django 1.7.
-	\item The frontend uses Ace for the code editor and Skulpt for the Python interpreter.
-	\item Currently the user can create new projects and access them with permalinks, fork projects, browse projects, edit and save projects, and make projects public or private.
-\end{rSubsection}
-
 \begin{rSubsection}{Lisp Interpreters}{}{}{}
 	\item I attempted to write a basic Lisp interpreter with no formal background in compilers. The result is quite buggy but I did learn a lot. If I have time, I try to give myself a more formal introduction to compilers. I will also have to write a compiler as part of my degree.
 	\item {\href{https://github.com/dcjohnson/hackit}{First attempt}}
@@ -112,7 +108,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}{Books}{}{}{}
-	\item Started reading The Art of Computer Programming by Donald Knuth. It is slow going because it is a very dense book; I also have to check it out from the library.
+	\item I have read the first three chapters Leslie Lamport's \textit{Specifying Systems}. This by no means grants me working proficiency but I am looking for projects for me to use it.
 \end{rSubsection}
 
 \end{rSection}
@@ -124,18 +120,16 @@
 {\bf General Programming}
 
 \btab{1.1}{ l l }
-	Languages: & C\#, JavaScript \\
-	Proficient Languages: & C, Java, Python, Rust \\
+	Currently Used Languages: & Go \\
+	Previously Used Langauges: & C, C++, Java, Python, Rust, C\#, Javascript \\
 	Version Control Systems: & Git, Team Foundation Server. \\
-	Debuggers: & GDB, Visual Studio 2013 Debugging Software; learning the Nodejs debugger. \\
-	Package Managers: & Cargo(Rust), PIP(Python), NuGet, NPM. \\
 \etab
 
 {\bf Web Programming}
 
 \btab{1.1}{ l l }
-	Server side: & Node.js, C\#, Python, PHP, and SQL (MySQL, Microsoft SQL Server). \\
-	Client side: & JavaScript, CSS, (X)HTML. \\
+	Server side: & Node.js, C\# (MVC .NET), Python (Django), PHP, and SQL (MySQL, Microsoft SQL Server). \\
+	Client side (some experience): & JavaScript(Angular as well as normal JS), CSS, HTML. \\
 	Servers: & Apache, Internet Information Services, Node.js. \\
 	Web Frameworks: & Django, ASP.NET MVC C\#, Express.js. \\
 	Common Gateway Interface: & Python. \\
@@ -153,13 +147,6 @@
 \btab{1.1}{ l l }
 	Linux: & Debian, Ubuntu, Manjaro, Linux Mint, Slackware. \\
 	Windows: & 7. \\
-\etab
-
-{\bf Unix System Administration}
-
-\btab{1.1}{ l l }
-	Proficient with command line utils: & grep, ssh, vim, nano, tar etc; really good at Googling this stuff. \\
-	Experience with: & configuration files, package managers, compilation, makefiles. \\
 \etab
 
 \end{rSection}
