--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -120,7 +120,7 @@
 {\bf General Programming}
 
 \btab{1.1}{ l l }
-	Currently Used Languages: & Go \\
+	Currently Used Languages: & Go, Latex \\
 	Previously Used Langauges: & C, C++, Java, Python, Rust, C\#, Javascript \\
 	Version Control Systems: & Git, Team Foundation Server. \\
 \etab
@@ -128,8 +128,8 @@
 {\bf Web Programming}
 
 \btab{1.1}{ l l }
-	Server side: & Node.js, C\# (MVC .NET), Python (Django), PHP, and SQL (MySQL, Microsoft SQL Server). \\
-	Client side (some experience): & JavaScript(Angular as well as normal JS), CSS, HTML. \\
+	Server side: & Node.js, C\# (MVC .NET), Python (Django), PHP, SQL. \\
+	Client side : & JavaScript(Angular as well as normal JS), CSS, HTML. \\
 	Servers: & Apache, Internet Information Services, Node.js. \\
 	Web Frameworks: & Django, ASP.NET MVC C\#, Express.js. \\
 	Common Gateway Interface: & Python. \\
