--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -21,7 +21,7 @@
 }
 
 \name{Dylan Johnson} % Your name
-\address{172 N 920 W \\ Orem, Utah 84057} % Your address
+\address{172 N 920 W \\ Orem, Utah 84057 \\ August, 23, 2016} % Your address
 \address{(501)~$\cdot$~547~$\cdot$~1621 \\ dylanatasmsa@gmail.com} % Your phone number and email
 
 \begin{document}
