--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -29,8 +29,19 @@
 % Work Experience
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{Infrastructure as a Service Team, Ancestry.com}{February 2016 - Present}{Software Engineering Intern}{Provo, UT}
-  \item Working with Docker, Kubernetes, and Go to write infrastructural software for Ancestry.com
+\begin{rSubsection}{Infrastructure as a Service Team, Ancestry.com}{March 2017 - Present}{Software Developer}{Provo, UT}
+\item Assisted teams with migration and trouble shooting in a Docker/Kubernetes environment.
+\item Implemented tools to ease deployment and resource management in Kubernetes.
+\item Implemented and optimized tools for logging and monitoring in Kubernetes.
+\item Stayed current with the latest features in Kubernetes to optimize our current system and add new abilities to developers. 
+\end{rSubsection}
+  
+\begin{rSubsection}{Infrastructure as a Service Team, Ancestry.com}{February 2016 - March 2017}{Software Engineering Intern}{Provo, UT}
+\item Assisted teams with migration and trouble shooting in a Docker/Kubernetes environment.
+\item Implemented tools to ease deployment and resource management in Kubernetes.
+\item Implemented and optimized tools for logging and monitoring in Kubernetes.
+\item Stayed current with the latest features in Kubernetes to optimize our current system and add new abilities to developers.
+\item Helped reimplement a core backend service in Go.
 \end{rSubsection}
 
 \begin{rSubsection}{Search User Interface Team, Ancestry.com}{May 2015 - February 2016}{Software Engineering Intern}{Provo, UT}
@@ -70,8 +81,8 @@
 \begin{rSection}{Education}
 
 \begin{rSubsection}{Utah Valley University}{August 2015 - Expected graduation date: December 2017}{B.S. in Computer Science: Computer Science emaphasis}
-\item Courses: Computer Networks 1, Computer Networks 2, Advanced C++, Intro to Numerical Programming, Python, Statistics and Probability for engineers.
-\item Currently Enrolled: Analysis of Programming Languages, Advanced/High Performance Architecture, Object Oriented Design Patterns, Ordinary Differential Equations.
+\item Courses: Compiler Construction, Computer Networking, Advanced C++, Numerical Programming, Python, Statistics, Analysis of Programming Languages, Advanced/High Performance Architecture, Object Oriented Design Patterns, Ordinary Differential Equations, Analysis of Algorithms, Abstract Algebra (Group Theory)
+\item Currently Enrolled: Studying Pierce's Software Foundations book, Modern Algebra (Group Theory and Ring Theory), Artificial Intelligence.
 \end{rSubsection}
 
 \begin{rSubsection}{University of Arkansas, Little Rock}{August 2014 - May 2015}{B.S. in Computer Science}
@@ -87,10 +98,6 @@
 
 \begin{rSection}{Online}
 
-\begin{rSubsection}{Github}{}{}{}
-	\item {\href{https://github.com/dcjohnson}{https://github.com/dcjohnson}}
-\end{rSubsection}
-
 \begin{rSubsection}{Linkedin}{}{}{}
 	\item {\href{https://www.linkedin.com/in/DylanJohnson1}{https://www.linkedin.com/in/DylanJohnson1}}
 \end{rSubsection}
@@ -98,14 +105,14 @@
 \end{rSection}
 
 % Personal Projects
-\begin{rSection}{Personal Projects (All hosted on github)}
+\begin{rSection}{Personal Projects}
 
-\begin{rSubsection}{Lisp Interpreters}{}{}{}
-	\item I attempted to write a basic Lisp interpreter with no formal background in compilers. The result is quite buggy but I did learn a lot. If I have time, I try to give myself a more formal introduction to compilers. I will also have to write a compiler as part of my degree.
-	\item {\href{https://github.com/dcjohnson/hackit}{First attempt}}
-	\item {\href{https://github.com/dcjohnson/hackit-v2}{Recent attempt}}
-	\item {\href{https://github.com/dcjohnson/libhackit-v2}{Recent attempt}}
-\end{rSubsection}
+%% \begin{rSubsection}{Lisp Interpreters}{}{}{}
+%% 	\item I attempted to write a basic Lisp interpreter with no formal background in compilers. The result is quite buggy but I did learn a lot. If I have time, I try to give myself a more formal introduction to compilers. I will also have to write a compiler as part of my degree.
+%% 	\item {\href{https://github.com/dcjohnson/hackit}{First attempt}}
+%% 	\item {\href{https://github.com/dcjohnson/hackit-v2}{Recent attempt}}
+%% 	\item {\href{https://github.com/dcjohnson/libhackit-v2}{Recent attempt}}
+%% \end{rSubsection}
 
 \begin{rSubsection}{Books}{}{}{}
 	\item I have read the first three chapters Leslie Lamport's \textit{Specifying Systems}. This by no means grants me working proficiency but I am looking for projects for me to use it.
@@ -121,32 +128,21 @@
 
 \btab{1.1}{ l l }
 	Currently Used Languages: & Go, Latex \\
-	Previously Used Langauges: & C, C++, Java, Python, Rust, C\#, Javascript \\
-	Version Control Systems: & Git, Team Foundation Server. \\
-\etab
-
-{\bf Web Programming}
-
-\btab{1.1}{ l l }
-	Server side: & Node.js, C\# (MVC .NET), Python (Django), PHP, SQL. \\
-	Client side : & JavaScript(Angular as well as normal JS), CSS, HTML. \\
-	Servers: & Apache, Internet Information Services, Node.js. \\
-	Web Frameworks: & Django, ASP.NET MVC C\#, Express.js. \\
-	Common Gateway Interface: & Python. \\
+	Familiar With: & C, C++, Java, Python, Rust, C\#, Javascript \\
+	Version Control Systems: & Git \\
 \etab
 
 {\bf Development Enviromnents}
 
 \btab{1.1}{ l l }
-	IDEs: & Visual Studio 2013, MonoDevelop, Intellij(Node.js). \\
-	Text Editors: & Emacs, Atom. \\
+	IDEs: & Visual Studio \\
+	Text Editors: & Emacs, VI. \\
 \etab
 
 {\bf Operating Systems}
 
 \btab{1.1}{ l l }
-	Linux: & Debian, Ubuntu, Manjaro, Linux Mint, Slackware. \\
-	Windows: & 7. \\
+	Unix: & Proficient in the use of Unix derived operating systems such as Linux and MacOS. \\
 \etab
 
 \end{rSection}
