--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -98,7 +98,7 @@
 \begin{rSection}{Personal Projects}
 
   \begin{rSubsection}{Books}{}{}{}
-  \item First three chapters of Leslie Lamport's \textit{Specifying Systems}.
+  \item Read the first three chapters of Leslie Lamport's \textit{Specifying Systems}.
   \end{rSubsection}
 
 \end{rSection}
