--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -110,7 +110,7 @@
   {\bf General Programming}
 
   \btab{1.1}{ l l }
-  Currently Used Languages: & Go, Latex, Coq (Gallina) \\
+  Currently Used Languages: & Go, \LaTeX, Coq (Gallina) \\
   Experience With: & C, C++, Java, Python, Rust, C\#, Javascript \\
   Version Control Systems: & Git \\
   CI/CD Systems: & Jenkins \\
