--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -69,10 +69,9 @@
 
 \begin{rSection}{Education}
 
-  \begin{rSubsection}{Utah Valley University}{August 2015 - Expected graduation date: December 2017}{B.S. in Computer Science: Computer Science emphasis and Mathematics Minor}
-  \item Current GPA: 3.64
-  \item Courses: Compiler Construction, Computer Networking, Advanced C++, Numerical Programming, Python, Statistics, Analysis of Programming Languages, Advanced/High Performance Architecture, Object Oriented Design Patterns, Ordinary Differential Equations, Analysis of Algorithms, Abstract Algebra (Group Theory)
-  \item Currently Enrolled: Studying Pierce's Software Foundations book, Modern Algebra (Group Theory and Ring Theory), Artificial Intelligence.
+  \begin{rSubsection}{Utah Valley University}{August 2015 - December 2017}{Graduated with B.S. in Computer Science: Computer Science emphasis and Mathematics Minor}
+  \item GPA: 3.65
+  \item Courses: Compiler Construction, Computer Networking, Advanced C++, Numerical Programming, Python, Statistics, Analysis of Programming Languages, Advanced/High Performance Architecture, Object Oriented Design Patterns, Ordinary Differential Equations, Analysis of Algorithms, Abstract Algebra (Group Theory), Software Foundations (independent study), Modern Algebra (Group Theory and Ring Theory), Artificial Intelligence.
   \end{rSubsection}
   
   \begin{rSubsection}{University of Arkansas, Little Rock}{August 2014 - May 2015}{B.S. in Computer Science (no degree)}
