--- a/resume.tex
+++ b/resume.tex
@@ -21,7 +21,7 @@
 }
 
 \name{Dylan Johnson} % Your name
-\address{761 N 1250 E \\ Provo, Utah 84606 \\ August, 23, 2016} % Your address
+\address{10628 Indigo Sky Way \\ South Jordan, Utah 84095 \\ August, 23, 2016} % Your address
 \address{(501)~$\cdot$~547~$\cdot$~1621 \\ dylanatasmsa@gmail.com} % Your phone number and email
 
 \begin{document}
@@ -29,14 +29,14 @@
 % Work Experience
 \begin{rSection}{Experience}
 
-  \begin{rSubsection}{Platform Group, Ancestry.com}{March 2017 - Present}{Software Developer}{Provo, UT}
+  \begin{rSubsection}{Platform Group, Ancestry.com}{March 2017 - Present}{Software Developer}{Lehi, UT}
   \item Assisted teams with migration and trouble shooting in a Docker/Kubernetes environment.
   \item Implemented tools for deployment and resource management in Kubernetes.
   \item Implemented and optimized tools for logging and monitoring in Kubernetes.
   \item Stayed current with the latest features in Kubernetes to optimize our current system and add new abilities to developers. 
   \end{rSubsection}
   
-  \begin{rSubsection}{Infrastructure as a Service Team, Ancestry.com}{February 2016 - March 2017}{Software Engineering Intern}{Provo, UT}
+  \begin{rSubsection}{Infrastructure as a Service Team, Ancestry.com}{February 2016 - March 2017}{Software Engineering Intern}{Lehi, UT}
   \item Assisted teams with migration and trouble shooting in a Docker/Kubernetes environment.
   \item Implemented tools to ease deployment and resource management in Kubernetes.
   \item Implemented and optimized tools for logging and monitoring in Kubernetes.
@@ -109,7 +109,7 @@
   {\bf General Programming}
 
   \btab{1.1}{ l l }
-  Currently Used Languages: & Go, \LaTeX, Coq (Gallina) \\
+  Currently Used Languages: & Go, \LaTeX, Coq \\
   Experience With: & C, C++, Java, Python, Rust, C\#, Javascript \\
   Version Control Systems: & Git \\
   CI/CD Systems: & Jenkins \\
