--- a/resume.tex
+++ b/resume.tex
@@ -21,7 +21,7 @@
 }
 
 \name{Dylan Johnson} % Your name
-\address{10628 Indigo Sky Way \\ South Jordan, Utah 84095 \\ August, 23, 2016} % Your address
+\address{422 South 1200 East apartment A \\ Salt Lake City, Utah 84102 \\ April, 2018} % Your address
 \address{(501)~$\cdot$~547~$\cdot$~1621 \\ dylanatasmsa@gmail.com} % Your phone number and email
 
 \begin{document}
@@ -29,7 +29,12 @@
 % Work Experience
 \begin{rSection}{Experience}
 
-  \begin{rSubsection}{Platform Group, Ancestry.com}{March 2017 - Present}{Software Developer}{Lehi, UT}
+  \begin{rSubsection}{SATCOM and Special Programs, L3Harris}{June 2018 - Present}{Software Engineer}{Salt Lake City, Utah}
+  \item Software Engineer for communications programs for the Department of Defense.
+  \item Possesses an active SECRET security clearance.
+  \end{rSubsection}
+  
+  \begin{rSubsection}{Platform Group, Ancestry.com}{March 2017 - May 2018}{Software Developer}{Lehi, UT}
   \item Assisted teams with migration and trouble shooting in a Docker/Kubernetes environment.
   \item Implemented tools for deployment and resource management in Kubernetes.
   \item Implemented and optimized tools for logging and monitoring in Kubernetes.
@@ -94,13 +99,13 @@
 \end{rSection}
 
 % Personal Projects
-\begin{rSection}{Personal Projects}
+%% \begin{rSection}{Personal Projects}
 
-  \begin{rSubsection}{Books}{}{}{}
-  \item Read the first three chapters of Leslie Lamport's \textit{Specifying Systems}.
-  \end{rSubsection}
+%%   \begin{rSubsection}{Books}{}{}{}
+%%   \item Read the first three chapters of Leslie Lamport's \textit{Specifying Systems}.
+%%   \end{rSubsection}
 
-\end{rSection}
+%% \end{rSection}
 
 % Technical Strengths
 
@@ -109,8 +114,8 @@
   {\bf General Programming}
 
   \btab{1.1}{ l l }
-  Currently Used Languages: & Go, \LaTeX, Coq \\
-  Experience With: & C, C++, Java, Python, Rust, C\#, Javascript \\
+  Currently Used Languages: & C++ and Unix Shell Scripting \\
+  Experience With: & C, C++, Java, Python, Rust, C\#, Javascript, Go, \LaTeX \\
   Version Control Systems: & Git \\
   CI/CD Systems: & Jenkins \\
   \etab
@@ -126,6 +131,12 @@
 
   \btab{1.1}{ l l }
   Unix: & Linux and MacOS
+  \etab
+
+  {\bf Miscellaneous}
+
+  \btab{1.1}{ l l }
+  Qualifications: An active SECRET security clerance
   \etab
 
 \end{rSection}
