--- a/resume.tex
+++ b/resume.tex
@@ -21,7 +21,7 @@
 }
 
 \name{Dylan Johnson} % Your name
-\address{422 South 1200 East apartment A \\ Salt Lake City, Utah 84102 \\ April, 2018} % Your address
+\address{61 South 600 East apartment 6 \\ Salt Lake City, Utah 84102 \\ August, 2020} % Your address
 \address{(501)~$\cdot$~547~$\cdot$~1621 \\ dylanatasmsa@gmail.com} % Your phone number and email
 
 \begin{document}
